Fix some layout issues

--- a/assets/css/components/_logo.scss
+++ b/assets/css/components/_logo.scss
@@ -21,7 +21,7 @@
 }
 
 .logo__wrapper {
-  width: 10rem;
+  width: 7rem;
   line-height: 0;
   padding-bottom: 0.5em;
 }
