--- a/assets/css/elements/_headings.scss
+++ b/assets/css/elements/_headings.scss
@@ -6,6 +6,7 @@ h3 {
 }
 
 h3 {
+  margin-top: 2rem;
   font-size: 1.35rem;
 }
 
